--- a/css/style.css
+++ b/css/style.css
@@ -863,7 +863,44 @@ Zoom effect in produt site
 }
 
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+
+.banner {
+  width: 100%;
+  
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  background-image: url(../images/slider/raptorcompleto.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background:center fixed url(../images/slider/raptorcompleto.jpg);
+  flex: 2;
+  padding: 25vh;
+}
+
+.banner_2 {
+  width: 100%;
+  
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  background-image: url(../images/slider/raptor_slied.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background:center fixed url(../images/slider/raptor_slied.jpg);
+
+
+}
 /*To solve overlap bug at the edges during magnification*/
 
 
@@ -2147,6 +2184,47 @@ Zoom effect in produt site
 }
 .page-404 h1 {
   font-size: 200px;
+}
+
+
+
+
+.paralelismo
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.image1, .image2
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+
+.image1{
+    background-image: url(../images/slider/vector_skin_skin.jpg);
+    
+    
+}
+
+.image2 {
+    background-image: url(../images/slider/vectorskin_negro.jpg);
+    left: 50%;
+    background-attachment: fixed;
+    border-left: 3px solid#111;
+    
 }
 
 /*============================================================
