--- a/slider/demo/slider.css
+++ b/slider/demo/slider.css
@@ -27,23 +27,7 @@
   margin-bottom: 0.5em;
 }
 
-h1,
-h2 {
-  margin-top: 0;
-  font-size: calc(2rem + 28 * (100vw - 375px)/ (1199 - 375));
-  margin-bottom: 0.2em;
-  font-weight: bold;
-}
 
-a {
-  color: inherit;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-a:hover {
-  color: black;
-}
 
 @media (min-width: 1200px) {
   h1,
@@ -51,7 +35,19 @@ a:hover {
     font-size: 60px;
   }
 
+
   .slide-content p {
     font-size: 26px;
   }
+
+
+}
+
+@media only screen and (max-width:700px){
+  .container1 {
+    width: 100%;
+    
+  }
+ 
+  
 }
