--- a/css/style.css
+++ b/css/style.css
@@ -901,6 +901,38 @@ Zoom effect in produt site
 
 
 }
+
+.banner_3 {
+  width: 100%;
+  
+  height: 100vh;
+  display: fixed;
+  align-items: center;
+  text-align: left;
+  background-image: url(../images/slider/vectorskin_negro.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background:center fixed url(../images/slider/vectorskin_negro.jpg);
+  flex: 2;
+  padding: 25vh;
+}
+
+.banner_4 {
+  width: 100%;
+  
+  height: 100vh;
+  display: fixed;
+  align-items: center;
+  text-align: left;
+  background-image: url(../images/slider/vector_skin_skin.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background:center fixed url(../images/slider/vector_skin_skin.jpg);
+
+
+}
 /*To solve overlap bug at the edges during magnification*/
 
 
@@ -2189,7 +2221,7 @@ Zoom effect in produt site
 
 
 
-.paralelismo
+/* .paralelismo
 {
     position: absolute;
     top: 0;
@@ -2225,7 +2257,7 @@ Zoom effect in produt site
     background-attachment: fixed;
     border-left: 3px solid#111;
     
-}
+} */
 
 /*============================================================
 	For Small Desktop
