--- a/slider/demo/slider.css
+++ b/slider/demo/slider.css
@@ -8,7 +8,7 @@
 }
 
 .slide-content {
-  position: absolute;
+  position:relative;
   top: 50%;
   left: 50%;
   color: white;
@@ -43,7 +43,7 @@
 
 }
 
-@media only screen and (max-width:700px){
+@media only screen and (max-width:1920px){
   .container1 {
     width: 100%;
     
